build: update and executable project name
The project and executable names have been updated to "crawler"

Signed-off-by: José Guilherme Vanz <guilherme.sft@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,9 @@
-project('commoncrawl_parser', 'cpp', version: '0.9.0', default_options : ['cpp_std=c++14'])
+project('crawler', 'cpp', version: '0.9.0', default_options : ['cpp_std=c++14'])
 
 #dependencies
 seastar = dependency('seastar')
 
 sources = ['src/main.cc']
 
-executable('commoncrawl', sources, dependencies: seastar)
+executable('crawler', sources, dependencies: seastar)
 
