libwarc: adds libwarc as submodule
Adds the libwarc as sumodule and subproject of the crawler. Thus, it's
easy to build the lib and link with the crawler binary.

Signed-off-by: José Guilherme Vanz <guilherme.sft@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,12 @@
-project('crawler', 'cpp', version: '0.9.0', default_options : ['cpp_std=c++14'])
+project('crawler', 'cpp', version: '0.9.0', default_options : ['cpp_std=c++14'],
+    license: 'GPL2', )
 
 #dependencies
 seastar = dependency('seastar')
+libwarc_dep = dependency('libwarc', fallback: ['libwarc', 'libwarc_dep'])
+
 
 sources = ['src/main.cc']
 
-executable('crawler', sources, dependencies: seastar)
+executable('crawler', sources, dependencies: [libwarc_dep, seastar])
 
