meson.buid: adds rdkafka as dependency
The service will require the file to process from a kafka topic. To
allow this, a Apache Kafka client library has been added to the project,
the librdkafka.

Signed-off-by: José Guilherme Vanz <guilherme.sft@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -4,9 +4,9 @@ project('crawler', 'cpp', version: '0.9.0', default_options : ['cpp_std=c++14'],
 #dependencies
 seastar = dependency('seastar')
 libwarc_dep = dependency('libwarc', fallback: ['libwarc', 'libwarc_dep'])
-
+rdkafka = dependency('rdkafka++', version: '0.9.5')
 
 sources = ['src/main.cc']
 
-executable('crawler', sources, dependencies: [libwarc_dep, seastar])
+executable('crawler', sources, dependencies: [libwarc_dep, seastar, rdkafka])
 
